# clash-systolic

./: .gitignore  LICENSE  README.md  Setup.hs  cabal.project  clash-systolic.cabal  hie.yaml
.github/workflows/: ci.yml
src/Clash/: Systolic.hs
src/Clash/Systolic/: Cell.hs  Network.hs
src/Clash/Systolic/Network/: Pipeline.hs  Rectangle.hs  Tree.hs
tests/: Doctest.hs  Doctests.hs  TestLibrary.hs
